# hidraw-rs

./: .gitignore  CONVENTIONS.md  Cargo.toml  HID.md  IMPLEMENTATION_STATUS.md  MIGRATION_GUIDE.md  README.md  UNSAFE_USAGE.md  deny.toml  flake.nix
.cargo/: config.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: rust.yml  security.yml
examples/: async_hid.rs  basic_hid.rs  coldcard_ping.rs  debug_enumerate.rs  debug_sysfs.rs  device_info_advanced.rs  hidapi_replacement.rs  list_devices.rs  report_descriptor.rs  test_coldcard_async.rs  test_coldcard_hid.rs  test_hidapi_compat.rs
hidapi-compat/: Cargo.toml  README.md
hidapi-compat/examples/: coldcard_compat.rs  test_compatibility.rs
hidapi-compat/src/: api.rs  device.rs  device_info.rs  error.rs  lib.rs
hidapi-compat/tests/: compatibility.rs  timeout_behavior.rs
src/: async_io.rs  device.rs  error.rs  hidapi_compat.rs  lib.rs
src/coldcard/: constants.rs  mod.rs  protocol.rs
src/hidraw/: device.rs  enumerate.rs  ioctl.rs  ioctl_libc.rs  ioctl_rustix.rs  mod.rs  sys.rs
src/protocol/: framing.rs  mod.rs  reports.rs
tests/: integration.rs
