[package]
name = "hidraw-rs"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "Rust library for Linux hidraw interface with minimal dependencies"
repository = "https://github.com/yourusername/hidraw-rs"
keywords = ["hid", "usb", "hidraw", "hardware", "coldcard"]
categories = ["hardware-support", "os::linux-apis"]

[dependencies]
libc = "0.2"
thiserror = "2.0"
rustix = { version = "1.0.8", features = ["fs", "process", "event", "std", "time"] }

# Optional dependencies
tokio = { version = "1.47", features = ["fs", "io-util", "time"], optional = true }
tracing = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
tracing-subscriber = "0.3"

[features]
default = []
async = ["tokio"]
logging = ["tracing"]
serialization = ["serde"]

[[example]]
name = "list_devices"
path = "examples/list_devices.rs"

[[example]]
name = "basic_hid"
path = "examples/basic_hid.rs"

[[example]]
name = "coldcard_ping"
path = "examples/coldcard_ping.rs"

[[example]]
name = "device_info_advanced"
path = "examples/device_info_advanced.rs"

[[example]]
name = "report_descriptor"
path = "examples/report_descriptor.rs"

[workspace]
members = [".", "hidapi-compat"]

# Workspace-wide lints to ensure consistent code quality
[workspace.lints.clippy]
# Deny all warnings in CI
all = "warn"
# Additional lints that stable Rust would warn about
uninlined_format_args = "warn"

[lints]
workspace = true
